--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@testing-library/dom": "^10.4.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,7 +43,9 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   }
 }
